[package]
name = "chinchoncito"
version = "0.1.0"
description = "Un bot de Discord para jugar al chinchon"
license = "AGPL-3.0-or-later"
repository = "https://github.com/matix64/chinchoncito"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
futures = "0.3.21"
once_cell = "1.12.0"
rand = "0.8.5"
redis = { version = "0.21.5", features = ["tokio-comp"] }
regex = "1.5.5"
rmp-serde = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.24"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.18", features = ["macros", "rt-multi-thread", "signal", "sync"] }
